change dir permission per unix socket

--- a/tasks/dirs.yml
+++ b/tasks/dirs.yml
@@ -2,17 +2,26 @@
 # File: dirs.yml - Consul directories
 
 - name: Create directories
-  file:
-    dest: "{{ item }}"
-    state: directory
-    owner: "{{ consul_user }}"
-    group: "{{ consul_group}}"
-    mode: 0700
-  with_items:
-    - "{{ consul_config_path }}"
-    - "{{ consul_configd_path }}"
-    - "{{ consul_data_path }}"
-    - "{{ consul_run_path }}"
+  block:
+
+    - file:
+        dest: "{{ item }}"
+        state: directory
+        owner: "{{ consul_user }}"
+        group: "{{ consul_group }}"
+        mode: 0700
+      with_items:
+        - "{{ consul_config_path }}"
+        - "{{ consul_configd_path }}"
+        - "{{ consul_data_path }}"
+
+    - file:
+        dest: "{{ consul_run_path }}"
+        state: directory
+        owner: "{{ consul_user }}"
+        group: "{{ consul_group }}"
+        mode: 0750
+
   when: ansible_os_family != 'Windows'
 
 - name: Create log directory
